# bfrpg-reference-data

./: .gitignore  LICENSE  Pipfile  Readme.md  Snakefile  formatting-issues.md  pyproject.toml
scripts/: enrich_equipment_descriptions.py  extract_equipment.py  extract_monsters.py  extract_spells.py  extractor_config.yaml  odt_parser.py
tests/: conftest.py  test_extract_equipment.py  test_extract_monsters.py  test_extract_spells.py  test_parser.py
tests/fixtures/: armor.yaml  equipment.yaml  monsters.yaml  shields.yaml  spells.yaml  vehicles.yaml  weapons.yaml
text/bestiary/: rabbit.txt
text/bestiary/beasts/: bear.txt  giant-rat.txt
text/bestiary/spiders/: spider.txt
