[project]
name = "bfrpg-reference-data"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "black>=24.0",
]

[tool.setuptools]
packages = ["scripts"]

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
